Don't allow cancelled attendees to check in

--- a/backend/lang/de.json
+++ b/backend/lang/de.json
@@ -280,5 +280,7 @@
     "Check-in list has expired": "Die Eincheckliste ist abgelaufen",
     "Check-in list is not active yes": "Eincheckliste ist noch nicht aktiv",
     "This attendee is not checked in": "Dieser Teilnehmer ist nicht eingecheckt",
-    "Attendee does not belong to this check-in list": "Teilnehmer gehört nicht zu dieser Eincheckliste"
+    "Attendee does not belong to this check-in list": "Teilnehmer gehört nicht zu dieser Eincheckliste",
+    "Attendee :attendee_name\\'s ticket is cancelled": "Das Ticket von Teilnehmer :attendee_name wurde storniert",
+    "Check-in list is not active yet": "Die Check-in-Liste ist noch nicht aktiv"
 }
