--- a/backend/lang/es.json
+++ b/backend/lang/es.json
@@ -280,5 +280,7 @@
     "Check-in list has expired": "La lista de registro ha expirado",
     "Check-in list is not active yes": "La lista de registro aún no está activa",
     "This attendee is not checked in": "Este asistente no está registrado",
-    "Attendee does not belong to this check-in list": "El asistente no pertenece a esta lista de registro"
+    "Attendee does not belong to this check-in list": "El asistente no pertenece a esta lista de registro",
+    "Attendee :attendee_name\\'s ticket is cancelled": "La entrada del asistente :attendee_name ha sido cancelada",
+    "Check-in list is not active yet": "La lista de registro aún no está activa"
 }
