--- a/backend/lang/pt-br.json
+++ b/backend/lang/pt-br.json
@@ -280,5 +280,7 @@
     "Check-in list has expired": "A lista de check-in expirou",
     "Check-in list is not active yes": "A lista de check-in ainda não está ativa",
     "This attendee is not checked in": "Este participante não fez check-in",
-    "Attendee does not belong to this check-in list": "O participante não pertence a esta lista de check-in"
+    "Attendee does not belong to this check-in list": "O participante não pertence a esta lista de check-in",
+    "Attendee :attendee_name\\'s ticket is cancelled": "O ingresso do participante :attendee_name foi cancelado",
+    "Check-in list is not active yet": "A lista de check-in ainda não está ativa"
 }
