--- a/backend/lang/ru.json
+++ b/backend/lang/ru.json
@@ -295,5 +295,7 @@
     "Check-in list has expired": "",
     "Check-in list is not active yes": "",
     "This attendee is not checked in": "",
-    "Attendee does not belong to this check-in list": ""
+    "Attendee does not belong to this check-in list": "",
+    "Attendee :attendee_name\\'s ticket is cancelled": "",
+    "Check-in list is not active yet": ""
 }
