--- a/backend/lang/zh-cn.json
+++ b/backend/lang/zh-cn.json
@@ -280,5 +280,7 @@
     "Check-in list has expired": "签到列表已过期",
     "Check-in list is not active yes": "签到列表尚未激活",
     "This attendee is not checked in": "该参与者尚未签到",
-    "Attendee does not belong to this check-in list": "该参与者不属于此签到列表"
+    "Attendee does not belong to this check-in list": "该参与者不属于此签到列表",
+    "Attendee :attendee_name\\'s ticket is cancelled": "参与者 :attendee_name 的票已被取消",
+    "Check-in list is not active yet": "签到列表尚未激活"
 }
