--- a/backend/lang/fr.json
+++ b/backend/lang/fr.json
@@ -280,5 +280,7 @@
     "Check-in list has expired": "La liste de pointage a expiré",
     "Check-in list is not active yes": "La liste de pointage n'est pas encore active",
     "This attendee is not checked in": "Ce participant n'est pas enregistré",
-    "Attendee does not belong to this check-in list": "Le participant n'appartient pas à cette liste de pointage"
+    "Attendee does not belong to this check-in list": "Le participant n'appartient pas à cette liste de pointage",
+    "Attendee :attendee_name\\'s ticket is cancelled": "Le billet de l'participant :attendee_name a été annulé",
+    "Check-in list is not active yet": "La liste d'enregistrement n'est pas encore active"
 }
